Enabling toolbox to be tested

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
-    "echarts": "^5.0.2",
+    "@linways/table-to-excel": "^1.0.4",
+    "echarts": "^5.2.2",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
